Update, fixing small bugs

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -359,6 +359,11 @@ header.navigation-menu {
       }
     }
   }
+  .hero {
+    height: auto!important;
+    min-height: auto !important;
+    max-height: max-content !important;
+  }
 }
 
 /* Estilos para tablets verticales */
